--- a/pub/v2.html
+++ b/pub/v2.html
@@ -14,9 +14,9 @@
         <div id="slidemenu">
           <ul class="nav navbar-nav">
             <li class="home"><a class="ajax" 
-            data-au="api.php" data-ad="" data-dg="home.html" data-dt="#tpl-home" data-fg="home.html" data-ft="#tpl-login" href="javascript:void(0);"><span class="glyphicon glyphicon-home"></span> <span class="hidden-sm hidden-md">HOME</span></a></li>
+            au="api.php" ad="" dg="home.html" dt="#tpl-home" fg="home.html" ft="#tpl-login" href="javascript:void(0);"><span class="glyphicon glyphicon-home"></span> <span class="hidden-sm hidden-md">HOME</span></a></li>
             <li class="automagic"><a href="#automagic"><span class="glyphicon glyphicon-list"></span> <span class="hidden-sm">MAGIC</span></a></li>
-            <li class="audio"><a class="ajax" data-au="api.php" data-ad="" data-dg="mustache.html" data-dt="#tpl-audio" data-fg="home.html" data-ft="#tpl-login" href="javascript:void(0);"><span class="glyphicon glyphicon-music"></span> <span class="hidden-sm">AUDIO</span></a></li>
+            <li class="audio"><a class="ajax" au="api.php" ad="" dg="mustache.html" dt="#tpl-audio" fg="home.html" ft="#tpl-login" href="javascript:void(0);"><span class="glyphicon glyphicon-music"></span> <span class="hidden-sm">AUDIO</span></a></li>
             <li class="video"><a href="#video"><span class="glyphicon glyphicon-film"></span> <span class="hidden-sm">VIDEO</span></a></li>
             <li class="db"><a target="_blank" href="db.php"><span class="glyphicon glyphicon-hdd"></span> <span class="hidden-sm">DB</span></a></li>
             <li class="editor"><a href="#editor"><span class="glyphicon glyphicon-pencil"></span> <span class="hidden-sm">EDIT</span></a></li>
@@ -46,7 +46,6 @@
       <div id="app"></div>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/mustache.min.js"></script>
     <script type="text/javascript">
       var app = {
