--- a/pub/v2.html
+++ b/pub/v2.html
@@ -13,16 +13,15 @@
       <div class="container-fluid">
         <div id="slidemenu">
           <ul class="nav navbar-nav">
-            <li class="home"><a class="ajax" 
-            au="api.php" ad="" dg="home.html" dt="#tpl-home" fg="home.html" ft="#tpl-login" href="javascript:void(0);"><span class="glyphicon glyphicon-home"></span> <span class="hidden-sm hidden-md">HOME</span></a></li>
-            <li class="automagic"><a href="#automagic"><span class="glyphicon glyphicon-list"></span> <span class="hidden-sm">MAGIC</span></a></li>
-            <li class="audio"><a class="ajax" au="api.php" ad="" dg="mustache.html" dt="#tpl-audio" fg="home.html" ft="#tpl-login" href="javascript:void(0);"><span class="glyphicon glyphicon-music"></span> <span class="hidden-sm">AUDIO</span></a></li>
-            <li class="video"><a href="#video"><span class="glyphicon glyphicon-film"></span> <span class="hidden-sm">VIDEO</span></a></li>
-            <li class="db"><a target="_blank" href="db.php"><span class="glyphicon glyphicon-hdd"></span> <span class="hidden-sm">DB</span></a></li>
-            <li class="editor"><a href="#editor"><span class="glyphicon glyphicon-pencil"></span> <span class="hidden-sm">EDIT</span></a></li>
-            <li class="git"><a href="#git"><span class="glyphicon glyphicon-cloud"></span> <span class="hidden-sm">GIT</span></a></li>
-            <li class="chess"><a target="_blank" href="chess.html"><span class="glyphicon glyphicon-queen"></span> <span class="hidden-sm">CHESS</span></a></li>
-            <li class="curl"><a href="#curl"><span class="glyphicon glyphicon-globe"></span> <span class="hidden-sm">CURL</span></a></li>
+            <li class="select active" c="active"><a class="ajax" dg="home.html" dt="#tpl-home" fg="home.html" ft="#tpl-login" href="javascript:void(0);"><span class="glyphicon glyphicon-home"></span> <span class="hidden-sm hidden-md">HOME</span></a></li>
+            <li class="select" c="active"><a href="javascript:void(0);"><span class="glyphicon glyphicon-list"></span> <span class="hidden-sm">MAGIC</span></a></li>
+            <li class="select" c="active"><a class="ajax" dg="mustache.html" dt="#tpl-audio" fg="home.html" ft="#tpl-login" href="javascript:void(0);"><span class="glyphicon glyphicon-music"></span> <span class="hidden-sm">AUDIO</span></a></li>
+            <li class="select" c="active"><a href="javascript:void(0);"><span class="glyphicon glyphicon-film"></span> <span class="hidden-sm">VIDEO</span></a></li>
+            <li class="select" c="active"><a target="_blank" href="db.php"><span class="glyphicon glyphicon-hdd"></span> <span class="hidden-sm">DB</span></a></li>
+            <li class="select" c="active"><a href="javascript:void(0);"><span class="glyphicon glyphicon-pencil"></span> <span class="hidden-sm">EDIT</span></a></li>
+            <li class="select" c="active"><a href="javascript:void(0);"><span class="glyphicon glyphicon-cloud"></span> <span class="hidden-sm">GIT</span></a></li>
+            <li class="select" c="active"><a target="_blank" href="chess.html"><span class="glyphicon glyphicon-queen"></span> <span class="hidden-sm">CHESS</span></a></li>
+            <li class="select" c="active"><a href="javascript:void(0);"><span class="glyphicon glyphicon-globe"></span> <span class="hidden-sm">CURL</span></a></li>
           </ul>
         </div>
         <div class="navbar-header">
